--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.kodlamaio</groupId>
-    <artifactId>common-package</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>common-package</name>
+    <groupId>io.github.yunusyalcinkaya</groupId>
+    <artifactId>common-package-t1</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+    <name>common-package-t1</name>
     <description>This is a common package for microservice project.</description>
     <properties>
         <java.version>17</java.version>
@@ -98,6 +98,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <classifier>exec</classifier>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -108,5 +109,15 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
